--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -1,3 +1,4 @@
 set -g default-terminal "screen-256color"
+set -g default-command "${SHELL}"
 
 source "/usr/share/powerline/bindings/tmux/powerline.conf"
