--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -1,4 +1,12 @@
 set -g default-terminal "screen-256color"
 set -g default-command "${SHELL}"
 
-source "/usr/share/powerline/bindings/tmux/powerline.conf"
+setw -g mode-keys vi
+
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+run '~/.tmux/plugins/tpm/tpm'
