Update tmux config

--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -5,8 +5,35 @@ setw -g mode-keys vi
 
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
+set-window-option -g status-fg colour12
+set-window-option -g status-bg colour8
+
+set-window-option -g status-left " #S "
+set-window-option -g status-left-fg colour15
+set-window-option -g status-left-bg colour0
+
+set-window-option -g status-right "#[fg=colour15,bg=colour8] #(cut -d' ' -f 1,2,3 /proc/loadavg) #[bg=colour7] %Y.%m.%d #[default] %H:%M "
+set-window-option -g status-right-length 100
+set-window-option -g status-right-fg colour15
+set-window-option -g status-right-bg colour0
+
+set-window-option -g window-status-format " #I: #W "
+set-window-option -g window-status-fg colour12
+set-window-option -g window-status-bg colour8
+
+set-window-option -g window-status-current-format " #I: #W "
+set-window-option -g window-status-current-fg colour8
+set-window-option -g window-status-current-bg colour12
+
+set-window-option -g window-status-bell-fg colour1
+set-window-option -g window-status-bell-bg colour15
+
+set-window-option -g window-status-separator ""
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-boot 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
